# openenv-urban-planner

./: .gitignore  Dockerfile  README.md  __init__.py  blog.md  client.py  manual_test.py  models.py  openenv.yaml  pyproject.toml
assets/plots/: .gitkeep
notebooks/: .gitkeep  train_grpo.ipynb
server/: Dockerfile  __init__.py  app.py  city_simulation.py  curriculum.py  rubric.py  urban_planner_environment.py
tests/: test_bug_fixes.py  test_environment.py  test_rubric.py
