[project]
name = "openenv-urban-planner"
version = "0.1.0"
description = "Urban planning OpenEnv environment for training LLMs on long-horizon spatial reasoning"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastmcp>=3.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.29.0",
    "fastapi>=0.110.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["openenv_urban_planner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
